# line-charts-vs-colorfields

./: README.MD  README.md  colormaps_pilot_analyzer.py  config.py  datasets_study_analyzer.py  datasets_visu_study_analyzer.py  height_pilot_analyzer.py  pyproject.toml  study_analyzer.py
data/height_pilot_data/: gy_t0_cleaned.csv  gy_t1_cleaned.csv  gy_t2_cleaned.csv  gy_t3_cleaned.csv  list_t0_cleaned.csv  list_t1_cleaned.csv  list_t2_cleaned.csv  list_t3_cleaned.csv
data/study_data/nadir/: wfg2105_less_stable_points.csv  wfg2105_top_nadir.json  wfg2147_less_stable_points.csv  wfg2147_top_nadir.json  wfg263_less_stable_points.csv  wfg263_top_nadir.json  wfg3105_less_stable_points.csv  wfg3105_top_nadir.json  wfg3147_less_stable_points.csv  wfg3147_top_nadir.json  wfg363_less_stable_points.csv  wfg363_top_nadir.json  wfg4105_less_stable_points.csv  wfg4105_top_nadir.json  wfg4147_less_stable_points.csv  wfg4147_top_nadir.json  wfg463_less_stable_points.csv  wfg463_top_nadir.json  wfg5105_less_stable_points.csv  wfg5105_top_nadir.json  wfg5147_less_stable_points.csv  wfg5147_top_nadir.json  wfg563_less_stable_points.csv  wfg563_top_nadir.json
helpers/: colormap_pilot_helpers.py  common_helpers.py  height_pilot_helpers.py
helpers/study_helpers/: general_study_helpers.py  moo_helpers.py
