[tool.poetry]
name = "post-processing-scented-wigets-experiment"
version = "0.1.0"
description = "This repository stores all the data and the processing needed to reproduce the results from Vasile CIORNA's PhD report as well as for the future papers affiliated to this work."
authors = ["Vasile Ciorna"]
readme = "README.md"
packages = [{include = "post_processing_scented_wigets_experiment"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-posthocs = "^0.9.0"
pymoo = "^0.6.0.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
